src/kubernetes/fortio-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fortio
  namespace: cinemaabyss
  labels:
    app: fortio
  annotations:
    sidecar.istio.io/inject: "false"
spec:
  containers:
  - name: fortio
    image: fortio/fortio:latest
    ports:
    - containerPort: 8080
      name: http-fortio
    - containerPort: 8079
      name: grpc-ping
    command: ["/usr/bin/fortio"]
    args: ["server"]
---
apiVersion: v1
kind: Service
metadata:
  name: fortio
  namespace: cinemaabyss
spec:
  selector:
    app: fortio
  ports:
  - port: 8080
    name: http
  - port: 8079
    name: grpc
